# duoload

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: actionlint.yml  release.yml  rust-checks.yml
internal_docs/: architecture.md  duocard_prd.md  duocard_specs.md
internal_docs/duocards/: deck_id_format.txt  example_reply.json  query  query.graphql
src/: error.rs  lib.rs  main.rs
src/anki/: deck.rs  deck_test.rs  mod.rs  note.rs  note_test.rs
src/duocards/: auth.rs  client.rs  deck.rs  mod.rs  models.rs
src/json/: mod.rs
src/output/: anki.rs  json.rs  mod.rs
src/transfer/: duplicates.rs  mod.rs  processor.rs
tests/: anki_integration_test.rs  client_test.rs  deck_test.rs  integration_test.rs  json_integration_test.rs  output_anki_test.rs  output_json_test.rs
