[package]
name = "duoload"
version = "0.1.0"
edition = "2024"
description = "Transfer vocabulary from Duocards to Anki"
authors = ["George Shuklin <george.shuklin@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
genanki-rs = "0.4"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
