[package]
name = "duoload"
version = "0.1.0"
edition = "2024"
description = "Export vocabulary from Duocards"
authors = ["George Shuklin <george.shuklin@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
genanki-rs = "0.4"
thiserror = "1.0"
tempfile = "3.10"
base64 = "0.21"
uuid = { version = "1.7", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
mockito = "1.3"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "fetch_cards"
path = "src/bin/fetch_cards.rs"
