[package]
name = "duoload"
version = "0.1.2"
edition = "2024"
description = "Export vocabulary from Duocards"
authors = ["George Shuklin <george.shuklin@gmail.com>"]
license = "MIT"
repository = "https://github.com/amarao/duoload"
keywords = ["duocards", "anki"]
categories = ["command-line-utilities"]

[features]
debug-tools = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
genanki-rs = "0.4"
thiserror = "2.0"
tempfile = "3.20"
base64 = "0.22"
uuid = { version = "1.17", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
mockito = "1.7"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "duoload"
path = "src/main.rs"

[[bin]]
name = "fetch_cards"
path = "src/bin/fetch_cards.rs"
required-features = ["debug-tools"]
